[tool.poetry]
name = "RL_rank_reduction_research"
version = "0.1.0"
description = ""
authors = ["PKramek <peterkramek@gmail.com>"]
readme = "README.md"
packages = [{include = "pytorch_2_0_test"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.0.0"
gymnasium = {extras = ["mujoco"], version = "^0.29.1"}
mlflow = "^2.11.1"
optuna = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
